--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
 <body>
     <div id="game-container">
-        <h1 id="">History Trivia Game</h1>
+        <h1 id="header">History Trivia Game</h1><br><br>
         <div id="inner-container">
             <button id="start">Start</button>
+            <div id="trivia-question"></div>
         </div>
     </div>
 
