--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    
+
 </head>
 
 <body>
+
     <div id="game-container">
-        <h1 id="header">History Trivia Game</h1><br><br>
+        <h1 id="header">Motown Trivia</h1><br><br>
         <div id="inner-container">
             <button id="start">Start</button>
             <div id="trivia-question"></div>
