finally done! Well, a working game anyway. Not that pretty

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
 
     <div id="game-container">
-        <h1 id="header">Motown Trivia</h1><br><br>
+        <h1 id="header">-Motown Trivia-</h1><br><br>
         <div id="inner-container">
+            <p>For those that love the sounds of Motown click here!</p><br><br>
             <button id="start">Start</button>
             <div id="trivia-question"></div>
         </div>
