updated background and colors

--- a/index.html
+++ b/index.html
@@ -8,19 +8,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Condiment|Lovers+Quarrel|Meddon|Mr+Dafoe|Qwigley"
+        rel="stylesheet">
 
 </head>
 
 <body>
 
     <div id="game-container">
-        <h1 id="header">-Motown Trivia-</h1><br><br>
+        <h1 id="header">-Motown Trivia-</h1>
         <div id="inner-container">
             <p>For those that love the sounds of Motown click here!</p><br><br>
             <button id="start">Start</button>
             <div id="trivia-question"></div>
         </div>
     </div>
+
+    <style>
+        body {
+            background-image: url("assets/images/music.gif");
+        }
+    </style>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
